@@ -1,0 +1,61 @@
+body {
+  font-family: "lucidux sans", "Lucida Sans", "Lucida", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Palatino", serif;
+}
+
+:link {
+  color: black;
+}
+:visited {
+  color: gray;
+}
+:link, :visited {
+  border-bottom: dashed 1px;
+}
+:link:hover, :visited:hover {
+  border-bottom: solid 1px;
+}
+:link img, :visited img {
+  padding: 1px;
+  border: dashed 1px;
+}
+:link:hover img, :visited:hover img {
+  border: solid 1px;
+}
+
+hr {
+  color: red;
+  background-color: red;
+  height: 3px;
+  border-style: outset;
+}
+
+td.md {
+  background-color: rgb(95%, 95%, 95%);
+}
+
+H1 { text-align: center; }
+/*
+:link.qindex {}
+:link.qindexRef {}
+:link.el { text-decoration: none; font-weight: bold }
+A.elRef { font-weight: bold }
+A.code { text-decoration: none; font-weight: normal; color: #4444ee }
+A.codeRef { font-weight: normal; color: #4444ee }
+*/
+DL.el { margin-left: -1cm }
+DIV.fragment { width: 100%; border: none; background-color: #eeeeee }
+DIV.ah { background-color: black; margin-bottom: 3; margin-top: 3 }
+/*TD.md { background-color: #f2f2ff }*/
+DIV.groupHeader { margin-left: 16; margin-top: 12; margin-bottom: 6; font-weight: bold }
+DIV.groupText { margin-left: 16; font-style: italic; font-size: smaller }
+FONT.keyword       { color: #008000 }
+FONT.keywordtype   { color: #604020 }
+FONT.keywordflow   { color: #e08000 }
+FONT.comment       { color: #800000 }
+FONT.preprocessor  { color: #806020 }
+FONT.stringliteral { color: #002080 }
+FONT.charliteral   { color: #008080 }
